--- a/public/index.html
+++ b/public/index.html
@@ -1,106 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <style>
-    * {
-      padding: 0;
-      margin: 0;
-    }
-
-    html,
-    body {
-      height: 100%;
-    }
-
-    .wrapp {
-      overflow: hidden;
-    }
-
-    .A {
-      width: 100%;
-      height: 100px;
-      background: red;
-      list-style: none;
-    }
-
-    .A li {
-      display: inline-block;
-    }
-
-    .B {
-      width: 100%;
-      height: 1200px;
-      background: #D9C666;
-    }
-
-    #tm {
-      display: none;
-    }
-
-    label {
-      display: none;
-    }
-
-    @media(max-width: 767px) {
-      .A {
-        width: 100%;
-        height: 100%;
-        position: fixed;
-        display: none;
-        z-index: 900;
-        opacity: 0.8;
-      }
-
-      .B {
-        padding-top: 100px;
-      }
-
-      label {
-        display: block;
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 50px;
-        height: 50px;
-        background: yellow;
-        z-index: 999;
-      }
-
-      #tm:checked~.wrapp .A {
-        display: block;
-        padding-top: 80px;
-      }
-
-      #tm:checked~.wrapp .A li {
-        display: block;
-      }
-    }
-  </style>
 </head>
 
 <body>
-  <input type="checkbox" id="tm" />
-  <div class="wrapp">
-    <ul class="A">
-      <li>菜单栏1</li>
-      <li>菜单栏</li>
-      <li>菜单栏</li>
-      <li>菜单栏</li>
-      <li>菜单栏</li>
-      <li>菜单栏</li>
-      <li>菜单栏</li>
-      <li>菜单栏</li>
-      <li>菜单栏</li>
-      <li>菜单栏</li>
-    </ul>
-    <div class="B">内容栏</div>
-    <label for="tm">Click Me</label>
-  </div>
+  <div>中华人民共和国</div>
 </body>
 
 </html>
